--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -1,6 +1,5 @@
-
-   .Main{
-   display: flex;
-   justify-content: space-between;
-   width: 1490px;
-  }
+.Main {
+  display: flex;
+  justify-content: space-around;
+  width: 77.6%;
+}
