--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -1,98 +1,118 @@
-.header{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.header {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.header_wrapper{
-height: 100px;
-display: flex;
-justify-content: space-around;
+.header_wrapper {
+  height: 100px;
+  display: flex;
+  justify-content: space-around;
 }
 
-.containers{
-width: 1920px;
-margin: 0 auto;
+.containers {
+  max-width: 1920px;
+  margin: 0 auto;
 }
 
-.header_input{
-    height: 56px;
-    width: 1184px;
-    background: #323537;
-   border-radius: 10px;
-   border:solid #323537 1px;
-   color: #FFFFFF;
-}
-.menuUsers{
-    width: 264px;
-    margin-left: 41px;
-    display: flex;
-    justify-content: space-between;
+.ModalFilterActiv {
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 518px;
+  background-color: #242426;
+  padding: 48px 40px 48px 40px;
 }
 
-.headerNavigatin{
-    margin-top: 40px;
-    height: 56px;
-    display: flex;
-justify-content: space-around;
-    }
+.ModalFilter {
+  display: none;
+}
 
-.logo{
-    width: 150px;
-    height: 40px;
-    margin-top: 48px;
-    /* display: inline-block; */
+.header_input {
+  height: 56px;
+  width: 100%;
+  background: #323537;
+  border-radius: 10px;
+  border: solid #323537 1px;
+  color: #ffffff;
 }
-.avatar{
-    vertical-align: middle;
-   
-    /* display: inline-block; */
-width: 56px;
-height: 56px;
-background-color: blueviolet;
-border-radius: 10px;
+.menuUsers {
+  width: 264px;
+  margin-left: 41px;
+  display: flex;
+  justify-content: space-between;
+}
 
+.headerNavigatin {
+  margin-top: 40px;
+  height: 56px;
+  display: flex;
+  justify-content: space-around;
 }
-.nicname{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    vertical-align: middle;
-    align-items: center;
-    /* max-width: 76px; */
-    /* display: inline-block; */
- /* margin-left: 20px; */
-    text-align: center;
-    height: 56px;
-    width: 113px;
-    /* position: relative; */
+.headerNavigatinInput {
+  width: 61.77%;
+  margin-top: 40px;
+  height: 56px;
 }
-h3{
-    color: #FFFFFF;
-    font-family: 'Exo 2';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-  
-/* transform: translateY(50%); */
+
+.logo {
+  margin-left: 62px;
+  width: 158px;
+  height: 40px;
+  margin-top: 48px;
+  /* display: inline-block; */
 }
-.filterMenu{
-    /* display: inline-block; */
+.avatar {
+  vertical-align: middle;
+
+  /* display: inline-block; */
+  width: 56px;
+  height: 56px;
+  background-color: blueviolet;
+  border-radius: 10px;
+}
+.nicname {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  vertical-align: middle;
+  align-items: center;
+  /* max-width: 76px; */
+  /* display: inline-block; */
+  /* margin-left: 20px; */
+  text-align: center;
+  height: 56px;
+  width: 113px;
+  /* position: relative; */
+}
+h3 {
+  color: #ffffff;
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+
+  /* transform: translateY(50%); */
+}
+.filterMenu {
+  /* display: inline-block; */
   margin-top: 16px;
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
-.linkModal{
-    cursor: pointer;
+.linkModal {
+  cursor: pointer;
 }
-.menuAuth{
-width: 190px;
-display: flex;
-justify-content: space-between;
+.menuAuth {
+  width: 190px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.auth{
-   margin-left: 50px;
-   font-size: 20px;
+.auth {
+  margin-left: 50px;
+  font-size: 20px;
 }
