--- a/src/containers/ModalFilter/ModalFilter.module.css
+++ b/src/containers/ModalFilter/ModalFilter.module.css
@@ -195,3 +195,28 @@ line-height: 24px;
 .ButModal:hover{
     background-color: #7B61FF;
 }
+
+.navClass{
+    position: absolute;
+    top: 0;
+    right: 0;
+   width: 100vw;
+   height: 100vh;
+   background-color: rgba(32, 32, 33,0.2);
+}
+
+.ModalFilterActiv{
+    position: absolute;
+   display: inline-block;
+   top: 0;
+   right: 0;
+    height: 100vh;
+    width: 518px;
+    background-color: #242426;
+    padding: 48px 40px 48px 40px;
+    z-index: 2;
+}
+
+.ModalFilterNone{
+   display: none;
+}
