--- a/src/pages/AddFilms/addFilms.module.css
+++ b/src/pages/AddFilms/addFilms.module.css
@@ -51,8 +51,11 @@
 }
 
 .InpytDescrFileNone {
-  display: none;
+  width: 0.1px;
+  height: 0.1px;
+  border: none;
   z-index: -1;
+  display: none;
 }
 
 .blockTextarea {
