--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -39,7 +39,7 @@
   color: #ffffff;
 }
 .menuUsers {
-  width: 264px;
+  max-width: 264px;
   margin-left: 41px;
   display: flex;
   justify-content: space-between;
@@ -52,9 +52,14 @@
   justify-content: space-around;
 }
 .headerNavigatinInput {
-  width: 61.77%;
+  /* width: 61.77%; */
   margin-top: 40px;
   height: 56px;
+  width: 77.7%;
+  margin-right: 65px;
+  display: flex;
+  justify-content: space-between;
+  /* display: flex; */
 }
 
 .logo {
@@ -84,7 +89,8 @@
   /* margin-left: 20px; */
   text-align: center;
   height: 56px;
-  width: 113px;
+  max-width: 113px;
+  margin-right: 56px;
   /* position: relative; */
 }
 h3 {
@@ -115,4 +121,8 @@ h3 {
 .auth {
   margin-left: 50px;
   font-size: 20px;
+}
+
+.wrapper_input {
+  width: 79.37%;
 }
