--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -70,13 +70,20 @@
   /* display: inline-block; */
 }
 .avatar {
+  text-align: center;
+  padding-top: 18px;
   vertical-align: middle;
-
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
   /* display: inline-block; */
   width: 56px;
   height: 56px;
   background-color: blueviolet;
   border-radius: 10px;
+  color: #fff;
 }
 .nicname {
   display: flex;
