--- a/src/containers/MovieBlock/MovieBlock.module.css
+++ b/src/containers/MovieBlock/MovieBlock.module.css
@@ -1,6 +1,7 @@
 .MovieBlock {
   width: 266px;
   height: 433px;
+  margin-bottom: 40px;
 }
 
 .BoxImg {
@@ -8,7 +9,32 @@
   height: 357px;
   border-radius: 20px;
 }
-.style {
+.img {
   width: 100%;
   height: 100%;
+  border-radius: 20px;
+}
+.name {
+  display: block;
+  width: 100%;
+  height: 24px;
+  margin-top: 24px;
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #80858b;
+}
+
+.cotegory {
+  width: 100%;
+  height: 24px;
+
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #80858b;
 }
