--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -1,6 +1,31 @@
 .Main {
+  margin-top: 56px;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-between;
   width: 77.7%;
   margin-right: 65px;
+}
+.content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.pagenation {
+  text-align: center;
+  color: #80858b;
+}
+.PagenationLink {
+  margin-right: 7px;
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #80858b;
+  text-decoration: none;
+  cursor: pointer;
+}
+.PagenationLink:hover {
+  color: #7b61ff;
 }
