--- a/src/containers/MovieBlock/MovieBlock.module.css
+++ b/src/containers/MovieBlock/MovieBlock.module.css
@@ -1,7 +1,12 @@
 .MovieBlock {
+  display: inline-block;
   width: 266px;
   height: 433px;
   margin-bottom: 40px;
+  margin-right: 38px;
+}
+.MovieBlock:nth-child(1) {
+  margin-left: 20px;
 }
 
 .BoxImg {
