--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -5,11 +5,18 @@
   justify-content: space-between;
   width: 77.7%;
   margin-right: 65px;
+  height: 1010px;
 }
+
 .content {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(266px, 1fr));
+  grid-column-gap: 10px;
+  grid-row-gap: 1em;
+  /* display: flex; */
+  /* flex-direction: row; */
+  /* justify-content: space-between; */
+  /* flex-wrap: wrap; */
 }
 .pagenation {
   text-align: center;
