--- a/src/containers/Slyder/Slyder.module.css
+++ b/src/containers/Slyder/Slyder.module.css
@@ -1,4 +1,7 @@
 .wrapper_line {
+  /* position: absolute;
+  top: 0;
+  left: 0; */
   margin: 0 auto;
   /* display: flex;
   justify-content: left; */
@@ -6,13 +9,17 @@
   /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
   justify-content: space-between;
   width: 3040px;
+  transition: all 1s;
+  /* transform: translateX(1520px); */
 }
 
 .wrapper {
   /* padding: 60px; */
   width: 100%;
+  height: 500px;
   color: #fff;
   position: relative;
+  overflow: hidden;
 }
 .container {
   max-width: 1520px;
