--- a/src/containers/MovieBlock/MovieBlock.module.css
+++ b/src/containers/MovieBlock/MovieBlock.module.css
@@ -5,9 +5,9 @@
   margin-bottom: 40px;
   margin-right: 38px;
 }
-.MovieBlock:nth-child(1) {
+/* .MovieBlock:nth-child(1) {
   margin-left: 20px;
-}
+} */
 
 .BoxImg {
   width: 100%;
