--- a/src/containers/Navigation/Navigation.module.css
+++ b/src/containers/Navigation/Navigation.module.css
@@ -12,18 +12,32 @@
 .ListNavi {
   list-style-type: none;
   min-width: 123px;
-  min-height: 216px;
+  /* min-height: 216px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 .Linknavigation {
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
   cursor: pointer;
   text-decoration: none;
   color: #80858b;
 }
 .Linknavigation:hover {
   color: #7b61ff;
+}
+
+.NameList {
+  text-align: center;
+  margin-bottom: 20px;
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 24px;
+}
+.List {
+  margin-bottom: 10px;
 }
