--- a/src/pages/AddFilms/addFilms.module.css
+++ b/src/pages/AddFilms/addFilms.module.css
@@ -97,6 +97,15 @@
   line-height: 24px;
   color: #fff;
 }
+.TextGenre {
+  font-family: "Exo 2";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 24px;
+  color: #fff;
+  display: inline-block;
+}
 
 .blockButton {
   padding: 40px 0 40px;
@@ -134,5 +143,11 @@
   vertical-align: top;
 }
 .CheckBox {
-  display: inline-block;
+  margin-right: 20px;
+  /* display: inline-block; */
+}
+.wrapperCheck {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
